[package]
name = "apm"
version = "0.1.0"
edition = "2021"

[dependencies]
azure_identity = "0.26.0"
azure_security_keyvault_secrets = "0.4.0"
evdev = "0.13.1"
rdev = { version = "0.5.3", features=["unstable_grab"] }
tokio = "1.47.0"

[features]
default = ["unstable_grab"]
unstable_grab = ["rdev/unstable_grab"]

